Playlist related models

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+# Schema version: 20110419175921
+#
+# Table name: users
+#
+#  id         :integer         not null, primary key
+#  provider   :string(255)
+#  uid        :string(255)
+#  name       :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#  image      :string(255)
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
